[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vhviv_tools"
version = "0.0.1"
authors = [
  { name="Victor Viveiros", email="vh.viveiros@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]